# stock-market

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  database.py  database_testing.py  new_user_portfolio.py  pyproject.toml  stock_market_database.db
OrderBook/: OrderBook.py  changesAPIs.txt  handwrittentest.py  notesOnTests.txt  testChecker.py  testGenerator.py  tickers.py
OrderBook/TestLog/: 1-8-tests.py  1-9-tests.py  1-a-tests.py  1-b-test.py  1-c-tests.py  1-d-tests.py  1-e-tests.py  2025-04-01 200711.300694+0000.txt  2025-04-01 204745.189110+0000.txt  7-tests.py
TradingBot/: TradingBot.py  TradingBotTest.py
static/: index.html  script.js  styles.css
static/css/: main.css
static/js/: main.js
static/js/components/: graph.js  miniChart.js  orderBook.js  portfolio.js  search.js  stockDetails.js
static/js/data/: orderBookData.js  portfolioPerformance.js  stockData.js  userData.js
