[project]
name = "stock-market"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "sortedcontainers>=2.4.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
